@@ -248,4 +248,5 @@ AT_CHECK_MACRO([BOOST_FOREACH])
 
 AT_BANNER([Boost libraries])
 
+AT_CHECK_MACRO([BOOST_GRAPH])
 AT_CHECK_MACRO([BOOST_THREADS])
