@@ -1,5 +1,11 @@
 2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>
 
+	Add a check for Boost.Graph.
+	* build-aux/boost.m4 (BOOST_GRAPH): New.
+	* tests/testsuite.at: Test the new macro.
+
+2007-11-01  Benoit Sigoure  <tsuna@lrde.epita.fr>
+
 	Add macros for Boost.Foreach and Boost.Threads.
 	* build-aux/boost.m4 (BOOST_FOREACH, BOOST_THREADS): New.
 	* tests/testsuite.at: Test the new macros.
